# whr-bluetooth

./: .gitignore  CLAUDE.md  beacon_database.json  bluetooth_position_data.csv  config.yaml  pure_test_data.xlsx  terminal_locations.csv  ~$蓝牙定位.docx
.claude/: settings.local.json
BluetoothLocator-main/: .gitignore  README.md  bluetooth_data_path.json  bluetooth_locator.spec  build.bat  data.xlsx  get_data.py  main.py  n_calculate.py  pyproject.toml
BluetoothLocator-main/beacon/: beacon_database1.json  beacon_database2.json
BluetoothLocator-main/config/: bluetooth_data.json  bluetooth_data_path.json
BluetoothLocator-main/data/: 728data_line1.xlsx  728data_line2.xlsx  728data_square_large_1.xlsx  728data_square_large_2.xlsx  728data_square_small_1.xlsx  728data_square_small_2.xlsx  fakedata.xlsx  line1.xlsx  line2.xlsx  rssi_filtered.xlsx  square1.xlsx  新直线1.xlsx  直线0.xlsx  直线1-结果.xlsx  直线1.xlsx  直线2-结果.xlsx  长方形1-结果.xlsx  长方形2-结果.xlsx  长方形2.xlsx
BluetoothLocator-main/other_data/: 728data.xlsx  rssi_filtered.xlsx  简历2稿.docx  距离测试.xlsx
BluetoothLocator-main/tools/: n_calculate.py
IndoorPos-master/: README.md  pom.xml
IndoorPos-master/src/main/java/org/hqu/indoor_pos/algorithm/: Centroid.java  WeightTrilateral.java
IndoorPos-master/src/main/resources/spring/: applicationContext-db.xml  applicationContext-rmi.xml  applicationContext.xml
related-paper/: 10.01-三边最小二乘-梯度下降-指纹法整体对比.md  rss_localization_comparison.md
wb-work/: 01-BluetoothLocator项目定位算法分析报告.md
wb-work/10-related-paper/: 10.01-三边最小二乘-梯度下降-指纹法整体对比.md
(+21 files in other folders)
